--- a/app/views/admin/articles/_article.html.haml
+++ b/app/views/admin/articles/_article.html.haml
@@ -1,14 +1,16 @@
 %td.col-sm-1= article.id
-%td.col-sm-5= article.title
+%td.col-sm-4= article.title
 %td.col-sm-1= article.user.name
 %td.col-sm-2= article.created_at.to_formatted_s(:us_format)
 - if article.published?
   %td.col-sm-2= article.published_at.to_formatted_s(:us_format)
 - else
   %td.col-sm-2
-%td.col-sm-2
-  = link_to "Edit", edit_admin_article_path(article), class: 'button btn btn-xs btn-purple'
+
+%td.col-sm-4
+  = link_to raw("<span class='fa fa-edit'></span> Edit"), edit_admin_article_path(article), class: 'button btn btn-xs btn-purple'
+  = link_to raw("<span class='fa fa-ban'></span> Delete"), admin_article_path(article), class: 'btn btn-xs btn-danger', method: :delete, data: { confirm: 'Are you sure?'}
   - unless article.published?
-    = link_to "Publish", publish_admin_article_path(article), method: :post, class: 'btn btn-xs btn-danger'
+    = link_to raw("<span class='fa fa-bolt'></span> Publish"), publish_admin_article_path(article), method: :post, class: 'btn btn-xs btn-warning'
   - else
-    = link_to "Unpublish", unpublish_admin_article_path(article), method: :post, class: 'btn btn-xs btn-danger', confirm: true
+    = link_to "Unpublish", unpublish_admin_article_path(article), method: :post, class: 'btn btn-xs btn-warn', data: {confirm: true}
