--- a/app/views/admin/articles/_form.html.haml
+++ b/app/views/admin/articles/_form.html.haml
@@ -20,7 +20,8 @@
           %span.fa-calendar.fa
     .col-md-4
       %label Feature
+      = f.check_box :featured
 
   %fieldset.text-right
-    = f.button 'Cancel', class: 'btn btn-default'
+    = link_to "Cancel", admin_articles_path, class: 'btn btn-default'
     = f.submit 'Save', class: 'btn btn-purple'
