--- a/app/views/admin/articles/index.html.haml
+++ b/app/views/admin/articles/index.html.haml
@@ -1,3 +1,5 @@
+.pull-right
+  = link_to raw("<span class='fa fa-plus'></span> New Article"), new_admin_article_path, class: 'btn btn-purple'
 %h3 All Articles
 
 .table-responsive.table.bordered.col-md-12
@@ -11,6 +13,6 @@
         %th Published At
         %th Tasks
     %tbody
-      - Article.all.each do |article|
+      - @articles.each do |article|
         %tr.danger
           = render partial: article
