add invitable gem

--- a/app/views/admin/users/index.html.haml
+++ b/app/views/admin/users/index.html.haml
@@ -1,5 +1,5 @@
 .pull-right
-  = link_to raw("<span class='fa fa-plus'></span> New User"), new_admin_user_path, class: 'btn btn-purple'
+  = link_to raw("<span class='fa fa-plus'></span> Invite User"), new_admin_user_path, class: 'btn btn-purple'
 %h3 Users
 
 .table-responsive.table.bordered.col-md-12
