--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -13,17 +13,13 @@
     / HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries
     /[if lt IE 9] <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script><script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     = csrf_meta_tags
-    = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true
-    = javascript_include_tag 'application', 'data-turbolinks-track' => true
+    = stylesheet_link_tag    'admin', media: 'all', 'data-turbolinks-track' => true
+    = javascript_include_tag 'admin', 'data-turbolinks-track' => true
   %body
-    / START Main wrapper
     .wrapper
+      = render partial: 'layouts/admin/header'
       = render partial: 'layouts/admin/sidebar'
-      / START Main section
       %section
-        / START Page content
         .content-wrapper
           = yield
-      / END Main section
-    / END Main wrapper
-    = javascript_include_tag 'theme', 'pages'
+    = javascript_include_tag 'admin/theme', 'admin/pages'
