--- a/app/views/layouts/admin/_sidebar.html.haml
+++ b/app/views/layouts/admin/_sidebar.html.haml
@@ -1,206 +1,13 @@
-/ START Top Navbar
-%nav.navbar.navbar-default.navbar-top.navbar-fixed-top{:role => "navigation"}
-  / START navbar header
-  .navbar-header
-    %a.navbar-brand{:href => "index.html"}
-      .brand-logo
-        %span.atom ⚛
-        Quark
-      .brand-logo-collapsed
-        .span.atom ⚛
-  / END navbar header
-  / START Nav wrapper
-  .nav-wrapper
-    / START Left navbar
-    %ul.nav.navbar-nav
-      %li
-        / Button used to collapse the left sidebar. Only visible on tablet and desktops
-        %a.hidden-xs{"data-toggle-state" => "aside-collapsed", :href => "#"}
-          %em.fa.fa-navicon
-        / Button to show/hide the sidebar on mobile. Visible on mobile only.
-        %a.visible-xs{"data-toggle-state" => "aside-toggled", :href => "#"}
-          %em.fa.fa-navicon
-      / START Messages menu (dropdown-list)
-      %li.dropdown.dropdown-list
-        %a.dropdown-toggle{"data-play" => "flipInX", "data-toggle" => "dropdown", :href => "#"}
-          %em.fa.fa-envelope
-        / START Dropdown menu
-        %ul.dropdown-menu
-          %li.dropdown-menu-header Unread messages
-          %li.p-sm
-            %input.form-control{:onfocus => "javascript:void(0);", :placeholder => "Find contacts..", :type => "text"}/
-          %li
-            .scroll-viewport
-              / START list group
-              .list-group.scroll-content
-                / START list group item
-                %a.list-group-item{:href => "#"}
-                  .media
-                    .pull-left
-                      %img.media-object.img-circle.thumb32{:alt => "Image", :src => "app/img/user/01.jpg"}/
-                    .media-body.clearfix
-                      %small.pull-right 5m
-                      %strong.media-heading.text-primary
-                        %span.circle.circle-success.circle-md>
-                        Greg Lewis
-                      %p.mb-sm
-                        %small Nunc vel dui et leo sagittis fringilla.
-                / END list group item
-                / START list group item
-                %a.list-group-item{:href => "#"}
-                  .media
-                    .pull-left
-                      %img.media-object.img-circle.thumb32{:alt => "Image", :src => "app/img/user/04.jpg"}/
-                    .media-body.clearfix
-                      %small.pull-right 3h
-                      %strong.media-heading.text-primary
-                        %span.circle.circle-success.circle-md>
-                        Constance Cook
-                      %p.mb-sm
-                        %small Nunc vel dui et leo sagittis fringilla.
-                / END list group item
-                / START list group item
-                %a.list-group-item{:href => "#"}
-                  .media
-                    .pull-left
-                      %img.media-object.img-circle.thumb32{:alt => "Image", :src => "app/img/user/03.jpg"}/
-                    .media-body.clearfix
-                      %small.pull-right 3h
-                      %strong.media-heading.text-primary
-                        %span.circle.circle-danger.circle-md>
-                        Cody Barnes
-                      %p.mb-sm
-                        %small Nunc vel dui et leo sagittis fringilla.
-                / END list group item
-                / START list group item
-                %a.list-group-item{:href => "#"}
-                  .media
-                    .pull-left
-                      %img.media-object.img-circle.thumb32{:alt => "Image", :src => "app/img/user/05.jpg"}/
-                    .media-body.clearfix
-                      %small.pull-right 4h
-                      %strong.media-heading.text-primary
-                        %span.circle.circle-danger.circle-md>
-                        Gina Robinson
-                      %p.mb-sm
-                        %small Nunc vel dui et leo sagittis fringilla.
-                / END list group item
-                / START list group item
-                %a.list-group-item{:href => "#"}
-                  .media
-                    .pull-left
-                      %img.media-object.img-circle.thumb32{:alt => "Image", :src => "app/img/user/06.jpg"}/
-                    .media-body.clearfix
-                      %small.pull-right yesterday
-                      %strong.media-heading.text-primary
-                        %span.circle.circle-danger.circle-md>
-                        Violet Olson
-                      %p.mb-sm
-                        %small Nunc vel dui et leo sagittis fringilla.
-                / END list group item
-              / END list group
-          / START dropdown footer
-          %li.p
-            %a.text-center{:href => "#"}
-              %small.text-primary More messages
-          / END dropdown footer
-        / END Dropdown menu
-      / END Messages menu (dropdown-list)
-      / START User avatar toggle
-      %li
-        / Button used to collapse the left sidebar. Only visible on tablet and desktops
-        %a{"data-toggle-state" => "aside-user", :href => "#"}
-          %em.fa.fa-user
-      / END User avatar toggle
-    / END Left navbar
-    / START Right Navbar
-    %ul.nav.navbar-nav.navbar-right
-      / Search icon
-      / %li
-      /   %a{"data-toggle" => "navbar-search", :href => "#"}
-      /     %em.fa.fa-search
-      / Fullscreen
-      %li
-        %a{"data-toggle" => "fullscreen", :href => "#"}
-          %em.fa.fa-expand
-      / START Alert menu
-      %li.dropdown.dropdown-list
-        %a.dropdown-toggle{"data-play" => "flipInX", "data-toggle" => "dropdown", :href => "#"}
-          %em.fa.fa-bell
-          .label.label-danger 11
-        / START Dropdown menu
-        %ul.dropdown-menu
-          %li
-            / START list group
-            .list-group
-              / list item
-              %a.list-group-item{:href => "#"}
-                .media
-                  .pull-left
-                    %em.fa.fa-twitter.fa-2x.text-info
-                  .media-body.clearfix
-                    %p.m0 New followers
-                    %p.m0.text-muted
-                      %small 1 new follower
-              / list item
-              %a.list-group-item{:href => "#"}
-                .media
-                  .pull-left
-                    %em.fa.fa-envelope.fa-2x.text-warning
-                  .media-body.clearfix
-                    %p.m0 New e-mails
-                    %p.m0.text-muted
-                      %small You have 10 new emails
-              / list item
-              %a.list-group-item{:href => "#"}
-                .media
-                  .pull-left
-                    %em.fa.fa-tasks.fa-2x.text-success
-                  .media-body.clearfix
-                    %p.m0 Pending Tasks
-                    %p.m0.text-muted
-                      %small 11 pending task
-              / last list item
-              %a.list-group-item{:href => "#"}
-                %small More notifications
-                %span.label.label-danger.pull-right 14
-            / END list group
-        / END Dropdown menu
-      / END Alert menu
-      / START Contacts button
-      %li
-        %a{"data-toggle-state" => "offsidebar-open", :href => "#"}
-          %em.fa.fa-group
-      %li
-        = link_to raw("<em class='fa fa-power-off'></em>"), destroy_user_session_path, method: :delete
-      / END Contacts menu
-    / END Right Navbar
-  / END Nav wrapper
-  / START Search form
-  / %form.navbar-form{:action => "search.html", :role => "search"}
-  /   .form-group.has-feedback
-  /     %input.form-control{:placeholder => "Type and hit Enter..", :type => "text"}/
-  /     .fa.fa-times.form-control-feedback{"data-toggle" => "navbar-search-dismiss"}
-  /   %button.hidden.btn.btn-default{:type => "submit"} Submit
-  / END Search form
-/ END Top Navbar
-/ START aside
 %aside.aside
-  / START Sidebar (left)
   %nav.sidebar
-    / START user info
     .item.user-block
-      / User picture
       .user-block-picture
         .user-block-status
           %img.img-thumbnail.img-circle{:alt => "Avatar", :height => "60", :src => "app/img/user/02.jpg", :width => "60"}/
           .circle.circle-success.circle-lg
-        / Status when collapsed
-      / Name and Role
       .user-block-info
         %span.user-block-name.item-text Welcome User
-        %span.user-block-role UX-Dev
-    / END user info
+        %span.user-block-role= current_user.name.split(' ').first
     %ul.nav
       / START Menu
       %li.nav-heading Main navigation
@@ -229,130 +36,3 @@
       / END Menu
   / END Sidebar (left)
 / End aside
-/ START aside
-%aside.offsidebar
-  / START Off Sidebar (right)
-  %nav
-    .p-lg.text-center
-      %em.fa.fa-user
-      %strong Connections
-    %ul.nav
-      / END user info
-      %li.p
-        .form-group.has-feedback
-          %input.form-control.input-sm{:placeholder => "Search contacts..", :type => "text"}/
-          %em.fa.fa-search.form-control-feedback.text-muted
-      / START list title
-      %li.p
-        %small.text-muted ONLINE
-      / END list title
-      %li
-        / START User status
-        %a.media.p.mt0{:href => "#"}
-          %span.pull-right
-            %span.circle.circle-success.circle-lg
-          %span.pull-left
-            / Contact avatar
-            %img.media-object.img-circle.thumb32{:alt => "Image", :src => "app/img/user/05.jpg"}/
-          / Contact info
-          %span.media-body
-            %span.media-heading
-              %strong Laura Sam
-              %br/
-              %small.text-muted Lead, Developer
-        / END User status
-        / START User status
-        %a.media.p.mt0{:href => "#"}
-          %span.pull-right
-            %span.circle.circle-success.circle-lg
-          %span.pull-left
-            / Contact avatar
-            %img.media-object.img-circle.thumb32{:alt => "Image", :src => "app/img/user/06.jpg"}/
-          / Contact info
-          %span.media-body
-            %span.media-heading
-              %strong Beverley Pierce
-              %br/
-              %small.text-muted Writer
-        / END User status
-        / START User status
-        %a.media.p.mt0{:href => "#"}
-          %span.pull-right
-            %span.circle.circle-danger.circle-lg
-          %span.pull-left
-            / Contact avatar
-            %img.media-object.img-circle.thumb32{:alt => "Image", :src => "app/img/user/07.jpg"}/
-          / Contact info
-          %span.media-body
-            %span.media-heading
-              %strong Mika Long
-              %br/
-              %small.text-muted System Analyst
-        / END User status
-        / START User status
-        %a.media.p.mt0{:href => "#"}
-          %span.pull-right
-            %span.circle.circle-warning.circle-lg
-          %span.pull-left
-            / Contact avatar
-            %img.media-object.img-circle.thumb32{:alt => "Image", :src => "app/img/user/08.jpg"}/
-          / Contact info
-          %span.media-body
-            %span.media-heading
-              %strong Danielle Berry
-              %br/
-              %small.text-muted Developer
-        / END User status
-      / START list title
-      %li.p
-        %small.text-muted OFFLINE
-      / END list title
-      %li
-        / START User status
-        %a.media.p.mt0{:href => "#"}
-          %span.pull-right
-            %span.circle.circle-lg
-          %span.pull-left
-            / Contact avatar
-            %img.media-object.img-circle.thumb32{:alt => "Image", :src => "app/img/user/09.jpg"}/
-          / Contact info
-          %span.media-body
-            %span.media-heading
-              %strong Martin Cooper
-              %br/
-              %small.text-muted Designeer
-        / END User status
-        / START User status
-        %a.media.p.mt0{:href => "#"}
-          %span.pull-right
-            %span.circle.circle-lg
-          %span.pull-left
-            / Contact avatar
-            %img.media-object.img-circle.thumb32{:alt => "Image", :src => "app/img/user/10.jpg"}/
-          / Contact info
-          %span.media-body
-            %span.media-heading
-              %strong Daniel Curtis
-              %br/
-              %small.text-muted Designer
-        / END User status
-      %li
-        .p-lg.text-center
-          / Optional link to list more users
-          %a.btn.btn-purple.btn-sm{:href => "#", :title => "See more contacts"}
-            %strong Load more..
-    / Extra items
-    .p
-      %p
-        %small.text-muted Tasks completion
-      .progress.progress-xs.m0
-        .progress-bar.progress-bar-success.progress-80{"aria-valuemax" => "100", "aria-valuemin" => "0", "aria-valuenow" => "80", :role => "progressbar"}
-          %span.sr-only 80% Complete
-    .p
-      %p
-        %small.text-muted Upload quota
-      .progress.progress-xs.m0
-        .progress-bar.progress-bar-warning.progress-40{"aria-valuemax" => "100", "aria-valuemin" => "0", "aria-valuenow" => "40", :role => "progressbar"}
-          %span.sr-only 40% Complete
-  / END Off Sidebar (right)
-/ END aside
