--- a/app/assets/stylesheets/admin/admin.css
+++ b/app/assets/stylesheets/admin/admin.css
@@ -1768,7 +1768,7 @@ x:-o-prefocus,
    Component: user-block.less
  ========================================================================== */
 .user-block {
-  display: none;
+  /* display: none; */
   position: relative;
   padding: 25px 30px 0;
   cursor: pointer;
