--- a/app/views/articles/index.html.haml
+++ b/app/views/articles/index.html.haml
@@ -1,44 +1,137 @@
 .container-fluid
-  .col-sm-4
-    %article
-      .category
-        %a{href: "#"} Astronomy
-      %h3
-        %a{href: '#'}= @articles.first.title
-      .meta
-        %a{href: "#"} Admin User
-        \/
-        %a{href: "#"} 15 January 2014
-      = markdown(truncate(@articles.first.preview, {length: 200, omission: ' [...]'}))
-      .actions
-        .pull-left
-          %a{href: '#', class: 'btn read'} Read
-        .pull-right
-          %a{href: '#', class: 'social_solid'}
-            %span{class: 'fa fa-facebook'}
-          %a{href: '#', class: 'social_solid'}
-            %span{class: 'fa fa-twitter'}
-          %a{href: '#', class: 'social_solid'}
-            %span{class: 'fa fa-google-plus'}
-  .col-sm-4
-    %article
-      .category
-        %a{href: "#"} Astronomy
-      %h3
-        %a{href: '#'}= @articles.first.title
-      .meta
-        %a{href: "#"} Admin User
-        \/
-        %a{href: "#"} 15 January 2014
-      = markdown(truncate(@articles.first.preview, {length: 200, omission: ' [...]'}))
-  .col-sm-4
-    %article
-      .category
-        %a{href: "#"} Astronomy
-      %h3
-        %a{href: '#'}= @articles.first.title
-      .meta
-        %a{href: "#"} Admin User
-        \/
-        %a{href: "#"} 15 January 2014
-      = markdown(truncate(@articles.first.preview, {length: 200, omission: ' [...]'}))
+  .row
+    .col-sm-12
+      .col-sm-7
+        %article
+          .category
+            %a{href: "#"}= @articles.first.category.name
+          = @articles.first.title_link
+          .meta
+            = @articles.first.posted_by
+            \/
+            = @articles.first.published_date
+          = @articles.first.preview
+          /article_preview(@articles.first)
+          .actions
+            .pull-left
+              = @articles.first.read_button
+            .pull-right
+              %a{href: '#', class: 'social_solid'}
+                %span{class: 'fa fa-facebook'}
+              %a{href: '#', class: 'social_solid'}
+                %span{class: 'fa fa-twitter'}
+              %a{href: '#', class: 'social_solid'}
+                %span{class: 'fa fa-google-plus'}
+      .col-sm-5
+        %img.img-responsive{src: "http://lorempixel.com/500/300/"}
+  .row.articles{style: "margin: 45px 0px 0px 0px;"}
+    .col-sm-4
+      %article
+        .image
+          %img.img-responsive{src: "http://lorempixel.com/400/266/"}
+        .category
+          %a{href: "#"}= @articles.first.category.name
+        = @articles.first.title_link
+        .meta
+          = @articles.first.posted_by
+          \/
+          = @articles.first.published_date
+        = @articles.first.preview
+        /article_preview(@articles.first)
+        .actions
+          .pull-left
+            = @articles.first.read_button
+          .pull-right
+            %a{href: '#', class: 'social_solid'}
+              %span{class: 'fa fa-facebook'}
+            %a{href: '#', class: 'social_solid'}
+              %span{class: 'fa fa-twitter'}
+            %a{href: '#', class: 'social_solid'}
+              %span{class: 'fa fa-google-plus'}
+    .col-sm-4
+      %article
+        .image
+          %img.img-responsive{src: "http://lorempixel.com/400/266/"}
+        .category
+          %a{href: "#"} Astronomy
+        %h3
+          %a{href: '#'}= @articles.first.title
+        .meta
+          %a{href: "#"} Admin User
+          \/
+          %a{href: "#"} 15 January 2014
+        = article_preview(@articles.first)
+    .col-sm-4
+      %article
+        .image
+          %img.img-responsive{src: "http://lorempixel.com/400/266/"}
+        .category
+          %a{href: "#"} Astronomy
+        %h3
+          %a{href: '#'}= @articles.first.title
+        .meta
+          %a{href: "#"} Admin User
+          \/
+          %a{href: "#"} 15 January 2014
+        = article_preview(@articles.first)
+
+  .row.articles{style: "margin: 45px 0px 0px 0px;"}
+    .col-sm-6
+      %article
+        .image
+          %img.img-responsive{src: "http://lorempixel.com/750/400/"}
+        .category
+          %a{href: "#"}= @articles.first.category.name
+        = @articles.first.title_link
+        .meta
+          = @articles.first.posted_by
+          \/
+          = @articles.first.published_date
+        = @articles.first.preview
+        /article_preview(@articles.first)
+        .actions
+          .pull-left
+            = @articles.first.read_button
+          .pull-right
+            %a{href: '#', class: 'social_solid'}
+              %span{class: 'fa fa-facebook'}
+            %a{href: '#', class: 'social_solid'}
+              %span{class: 'fa fa-twitter'}
+            %a{href: '#', class: 'social_solid'}
+              %span{class: 'fa fa-google-plus'}
+    .col-sm-6
+      %article
+        .image
+          %img.img-responsive{src: "http://lorempixel.com/750/300/"}
+        .category
+          %a{href: "#"} Astronomy
+        %h3
+          %a{href: '#'}= @articles.first.title
+        .meta
+          %a{href: "#"} Admin User
+          \/
+          %a{href: "#"} 15 January 2014
+        = article_preview(@articles.first)
+  .row
+    .col-sm-12
+      %article
+        .category
+          %a{href: "#"}= @articles.first.category.name
+        = @articles.first.title_link
+        .meta
+          = @articles.first.posted_by
+          \/
+          = @articles.first.published_date
+        = @articles.first.preview
+        /article_preview(@articles.first)
+        .actions
+          .pull-left
+            = @articles.first.read_button
+          .pull-right
+            %a{href: '#', class: 'social_solid'}
+              %span{class: 'fa fa-facebook'}
+            %a{href: '#', class: 'social_solid'}
+              %span{class: 'fa fa-twitter'}
+            %a{href: '#', class: 'social_solid'}
+              %span{class: 'fa fa-google-plus'}
+
